fixed : comment reply font size too small when viewed in mobile. fixes #504

--- a/assets/front/css/dev-responsive.css
+++ b/assets/front/css/dev-responsive.css
@@ -213,7 +213,6 @@
 
 	/* comments */
 	.comment-tabs { font-size: 0.875em; }
-	.commentlist li { font-size: 0.8125em; }
 	.commentlist li ul li { padding-left: 10px; }
 
 	/* page */
