--- a/assets/front/css/main.css
+++ b/assets/front/css/main.css
@@ -2766,7 +2766,6 @@ box-shadow: inset 0 1px 0 rgba(0,0,0,0.05); }
 
 	/* comments */
 	.comment-tabs { font-size: 0.875em; }
-	.commentlist li { font-size: 0.8125em; }
 	.commentlist li ul li { padding-left: 10px; }
 
 	/* page */
